fix(security): assign default 'ROLE_USER' authority to users